...
    },
  }),
  FairAllFollowedArtists: reactModule({
    Component: FairAllFollowedArtistsQueryRenderer,
    options: {
      screenOptions: {
        headerTitle: "Artworks",
      },
    },
  }),
  Favorites: reactModule({
    Component: Favorites,
    options: {
...
    },
  }),
  MyAccountEditEmail: reactModule({
    Component: MyAccountEditEmailQueryRenderer,
    options: {
      screenOptions: {
        headerTitle: "Email",
      },
    },
  }),
  MyAccountEditPriceRange: reactModule({
    Component: MyAccountEditPriceRangeQueryRenderer,
    options: {
...
    },
  }),
  MyProfilePushNotifications: reactModule({
    Component: MyProfilePushNotificationsQueryRenderer,
    options: {
      screenOptions: {
        headerTitle: "Push Notifications",
      },
    },
  }),
  NewWorksFromGalleriesYouFollow: reactModule({
    Component: NewWorksFromGalleriesYouFollowScreen,
    options: {
...
