...
        "artistinsightsauctionresults": {
          "renderauctionresultsmodal": {
            "text1": "These auction results bring together sale data from top auction houses around the world, including Christie’s, Sotheby’s, Phillips and Bonhams. Results are updated daily.",
            "text2": "Please note that the sale price includes the hammer price and buyer’s premium, as well as any other additional fees (e.g., Artist’s Resale Rights)."
          },
          "infobutton": {
            "title": "Auction Results"
          },
          "sortmode": {
            "sortdescription": "Sorted by {sortDescription}"
          },
          "resultsText": "result",
          "resultsTextPlural": "results"
...
