...
      showFilterArtworksModal: false,
      sizeMetric: "cm",
    }

    renderWithWrappers(<MockFilterModalNavigator initialData={injectedState} />)

    expect(screen.getByText("Medium")).toBeTruthy()
    expect(screen.getByText("Time Period")).toBeTruthy()
  })

  it("should hide filter when aggregation counts are empty", () => {
    const injectedState: ArtworkFiltersState = {
      selectedFilters: [],
...
          })}
        />
      </ArtworkFiltersStoreProvider>
    )

    // the first row item takes users to the Sort navigation route
    fireEvent.press(screen.getByText("Sort By"))

    expect(mockNavigate).toBeCalledWith("SortOptionsScreen")
  })

  it("allows users to navigate forward to medium screen from filter screen", () => {
    renderWithWrappers(
...
  })
})

describe("Filter modal states", () => {
  it("displays the currently selected sort option number on the filter screen", () => {
    const injectedState: ArtworkFiltersState = {
      selectedFilters: [{ displayText: "Price (Low to High)", paramName: FilterParamName.sort }],
      appliedFilters: [],
      previouslyAppliedFilters: [],
      applyFilters: false,
      aggregations: mockAggregations,
      filterType: "artwork",
      counts: {
...
    expect(screen.getByText("Medium • 1")).toBeTruthy()
  })

  it("displays the filter screen apply button correctly when no filters are selected", () => {
    renderWithWrappers(<MockFilterModalNavigator />)

    expect(screen.getByText("Show Results")).toBeDisabled()
  })

  it("displays the filter screen apply button correctly when filters are selected", () => {
    const injectedState: ArtworkFiltersState = {
      selectedFilters: [{ displayText: "Price (Low to High)", paramName: FilterParamName.sort }],
      appliedFilters: [],
...
  })

  it("does not display default filters numbers on the Filter modal", () => {
    renderWithWrappers(<MockFilterScreen initialState={initialState} />)

    expect(screen.getByText("Sort By")).toBeTruthy()
    expect(screen.getByText("Rarity")).toBeTruthy()
    expect(screen.getByText("Medium")).toBeTruthy()
  })

  it("displays selected filters on the Filter modal", () => {
    const injectedState: ArtworkFiltersState = {
      selectedFilters: [
...
        {
          displayText: "Price (Low to High)",
          paramValue: "Price (Low to High)",
          paramName: FilterParamName.sort,
        },
      ],
      appliedFilters: [{ displayText: "Recently Added", paramName: FilterParamName.sort }],
      previouslyAppliedFilters: [
        { displayText: "Recently Added", paramName: FilterParamName.sort },
      ],
      applyFilters: false,
      aggregations: mockAggregations,
      filterType: "artwork",
...
    renderWithWrappers(
      <ArtworkFiltersStoreProvider>
        <AnimatedArtworkFilterButton isVisible onPress={jest.fn()} />
      </ArtworkFiltersStoreProvider>
    )

    expect(screen.getByText("Sort & Filter")).toBeTruthy()
  })

  it("Shows text when text prop is available", () => {
    renderWithWrappers(
      <ArtworkFiltersStoreProvider>
        <AnimatedArtworkFilterButton text="Filter Text" isVisible onPress={jest.fn()} />
...
