...
    {
      displayText: "Color",
      paramName: FilterParamName.colors,
      paramValue: ["yellow", "orange", "red"],
    },
    {
      displayText: "Size",
      paramName: FilterParamName.sizes,
      paramValue: ["MEDIUM", "LARGE"],
    },
  ]

  const multiSelectFiltersExpectedResult = {
...
